vehicle moving , added flag busy in vehicle
 vehicle i added some classes about location i needed to move it , i updated the front . added a flag busy in vehicle . tourneeimpl and auto-assign in tournee assignemnt updated